--- a/owl/ias_map_addons.owl.in
+++ b/owl/ias_map_addons.owl.in
@@ -15,7 +15,7 @@
 
 <rdf:RDF xmlns="http://ias.cs.tum.edu/kb/ias_map_addons.owl#"
      xml:base="http://ias.cs.tum.edu/kb/ias_map_addons.owl#"
-     xmlns:ias_map="http://ias.cs.tum.edu/kb/ias_semantic_map.owl#"
+     xmlns:ias_map="http://ias.cs.tum.edu/kb/pr2pnp_semantic_map.owl#"
      xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
      xmlns:map_addons="http://ias.cs.tum.edu/kb/map_addons.owl#"
      xmlns:owl2xml="http://www.w3.org/2006/12/owl2-xml#"
